--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,11 @@
 .container {
-  padding: 0 2rem;
+  width: 1000px;
+  margin: 0 auto;
 }
 
 .main {
+  width: 100%;
   min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
